<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016. Matsuda, Akihit (akihito104)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_writeTweet"
        android:icon="@drawable/selector_write_tweet"
        android:title="@string/action_writeTweet"
        android:orderInCategory="10"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_sendTweet"
        android:icon="@drawable/selector_send_tweet"
        android:title="@string/action_sendTweet"
        android:orderInCategory="11"
        android:visible="false"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_resumeTweet"
        android:icon="@drawable/ic_send_error"
        android:title="@string/action_resumeTweet"
        android:orderInCategory="12"
        app:showAsAction="ifRoom"
        android:visible="false"
        />
</menu>