...
            android:id="@+id/accountSpinner_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/desc_icon"
            android:layout_margin="@dimen/grid_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/accountSpinner_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:maskerShape="@drawable/s_rounded_mask_small"
            />
        <com.freshdigitable.udonroad.CombinedScreenNameTextView
...
